--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       crossorigin="anonymous"
     />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
@@ -114,14 +114,20 @@
           </div>
 
           <nav class="nav-menu float-right d-none d-lg-block">
-            <ul >
-              <li class="bottom-clip"><a href="index.html">R.K. International </a></li>
+            <ul>
+              <li class="bottom-clip-permanent">
+                <a href="index.html">R.K. International </a>
+              </li>
               <li class="bottom-clip"><a href="#">About</a></li>
               <li class="bottom-clip"><a href="#">Academic</a></li>
-              <li class="bottom-clip"><a href="#">Infrastructure & facility</a></li>
+              <li class="bottom-clip">
+                <a href="#">Infrastructure & facility</a>
+              </li>
               <li class="bottom-clip"><a href="#">Rules & Regulations</a></li>
 
-              <li class="bottom-clip"><a href="#contact">Beyond Academics</a></li>
+              <li class="bottom-clip">
+                <a href="#contact">Beyond Academics</a>
+              </li>
             </ul>
           </nav>
         </nav>
@@ -132,27 +138,139 @@
     <div id="carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="assets/images/books.jpg">
+          <img class="d-block w-100" src="assets/images/books.jpg" />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="assets/images/digital.jpg">
+          <img class="d-block w-100" src="assets/images/digital.jpg" />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="assets/images/library.jpg">
+          <img class="d-block w-100" src="assets/images/library.jpg" />
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+      <a
+        class="carousel-control-prev"
+        href="#carousel"
+        role="button"
+        data-slide="prev"
+      >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+      <a
+        class="carousel-control-next"
+        href="#carousel"
+        role="button"
+        data-slide="next"
+      >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
     <!-- content -->
 
-
+    <!-- Birthday Wishes -->
+    <div class="birthday">
+      <div class="container">
+        <div class="row">
+          <h2>Birthday Wishes</h2>
+          <div class="container">
+            <div class="col-md-12 birthday-div owl-carousel owl-theme owl-loaded owl-drag">
+              <div class="item">
+                <div class="image_student">
+  
+                </div>
+                <div class="content_student">
+                  <h4 class="birthday_date">10<span>Jan</span></h4>
+                  <h5>HAAPY BIRTHDAY</h5>
+                  <p>
+                    ABHINANDAN SHARMA
+                    <br>
+                    Class XII
+                  </p>
+                  <i>many many happy <br> returns of the day</i>
+                </div>
+              </div>
+              <div class="item">
+                <div class="image_student">
+  
+                </div>
+                <div class="content_student">
+                  <h4 class="birthday_date">10<span>Jan</span></h4>
+                  <h5>HAAPY BIRTHDAY</h5>
+                  <p>
+                    ABHINANDAN SHARMA
+                    <br>
+                    Class XII
+                  </p>
+                  <i>many many happy <br> returns of the day</i>
+                </div>
+              </div>
+              <div class="item">
+                <div class="image_student">
+  
+                </div>
+                <div class="content_student">
+                  <h4 class="birthday_date">10<span>Jan</span></h4>
+                  <h5>HAAPY BIRTHDAY</h5>
+                  <p>
+                    ABHINANDAN SHARMA
+                    <br>
+                    Class XII
+                  </p>
+                  <i>many many happy <br> returns of the day</i>
+                </div>
+              </div>
+              <div class="item">
+                <div class="image_student">
+  
+                </div>
+                <div class="content_student">
+                  <h4 class="birthday_date">10<span>Jan</span></h4>
+                  <h5>HAAPY BIRTHDAY</h5>
+                  <p>
+                    ABHINANDAN SHARMA
+                    <br>
+                    Class XII
+                  </p>
+                  <i>many many happy <br> returns of the day</i>
+                </div>
+              </div>
+              <div class="item">
+                <div class="image_student">
+  
+                </div>
+                <div class="content_student">
+                  <h4 class="birthday_date">10<span>Jan</span></h4>
+                  <h5>HAAPY BIRTHDAY</h5>
+                  <p>
+                    ABHINANDAN SHARMA
+                    <br>
+                    Class XII
+                  </p>
+                  <i>many many happy <br> returns of the day</i>
+                </div>
+              </div>
+              <div class="item">
+                <div class="image_student">
+  
+                </div>
+                <div class="content_student">
+                  <h4 class="birthday_date">10<span>Jan</span></h4>
+                  <h5>HAAPY BIRTHDAY</h5>
+                  <p>
+                    ABHINANDAN SHARMA
+                    <br>
+                    Class XII
+                  </p>
+                  <i>many many happy <br> returns of the day</i>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div style="margin: 100px 0px"></div>
     <!-- content -->
